add to do items

--- a/using-langgraph-gpt.ipynb
+++ b/using-langgraph-gpt.ipynb
@@ -817,6 +817,20 @@
    "source": [
     "langgraph.invoke({\"question\": \"Which Pull request having files change does Konoha is codeowner?\"})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Validate Cypher\n",
+    "# 2. Find way to use local llm to run the app\n",
+    "# 3. Use the real data from fed repo to test the app\n",
+    "#   - Design an appropriate schema for the data from the fed repo\n",
+    "# 4. Try deploying the app\n",
+    "#   - Flask"
+   ]
   }
  ],
  "metadata": {
